--- a/index.html
+++ b/index.html
@@ -39,7 +39,25 @@
 
 <h3>To watch the fight</h3> <a href="https://youtu.be/QsvRms3HJi4?si=8HDM7SGHMr3zzbL4"target="blank">click here</a>
 <a href="/home-work-2/contact.html"target="blank">for contact</a>
+
 </main>
+
+
+<style>
+body{
+    background-color: rgb(255, 143, 143)
+    (109, 34, 93, 0.719);
+}
+title {
+
+    color: lawngreen;
+}
+h1 {
+    color: tomato;
+}
+
+
+</style>
 
 </body>
 </html>
